--- a/Style.css
+++ b/Style.css
@@ -1,30 +1,32 @@
-
-
 :root,
-    :root.light {
-    --bg-color: white;
-    --text-color:black
-    }
-    :root.dark {
-    --bg-color: rgba(0,25,30,255);
-    --text-color: rgba(170,170,170,255);
-    }
+:root.light {
+  --bg-color: white;
+  --text-color: black;
+}
+:root.dark {
+  --bg-color: rgba(0, 25, 30, 255);
+  --text-color: rgba(170, 170, 170, 255);
+}
 body,
 html {
   height: 96%;
   width: 98%;
   margin: 0% 1% 1% 1%;
-  padding: 0% ;
-  background-color:var(--bg-color);
+  padding: 0%;
+  background-color: var(--bg-color);
 }
 #bg {
-  background-image: url(/BG/andrew-coelho-aL7SA1ASVdQ-unsplash_op.jpg);
-  border-radius: 0.3rem;
   height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   display: grid;
+}
+#MainBg{
+  
+  border-radius: 0.3rem;
+  height: 91%;
+  width: 94%;
+  margin: 0% 1% 1% 1%;
+  padding: 0%;
+  position: absolute;
 }
 #Center {
   display: flex;
@@ -40,8 +42,8 @@ html {
   color: var(--text-color);
 }
 #Sidebar {
-  background-color:var(--bg-color);
-  color:--text-color;
+  background-color: var(--bg-color);
+  color: --text-color;
   width: min-content;
   height: fit-content;
   padding: 1rem 0.5rem 1rem 0.5rem;
@@ -59,13 +61,20 @@ html {
   position: absolute;
   z-index: 1;
   display: flex;
-  color: var(--text-color)
+  color: var(--text-color);
+}
+#MainbarBg {
+  width: 20rem;
+  height: 30rem;
+  position: absolute;
+  border-radius: 0.5rem;
+  z-index: -1;
+  background-image: url(/BG/filip-zrnzevic-QsWG0kjPQRY-unsplash_Night.jpg);
 }
 #Mainbar {
   width: 20rem;
   height: 30rem;
   border-radius: 0.5rem;
-  background-image: url(/BG/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -78,21 +87,22 @@ html {
   align-items: center;
   justify-content: center;
 }
-#Header{
+#Header {
   height: 3rem;
 }
-#ThemeButton{
+#ThemeButton {
   height: 3rem;
   display: flex;
+  margin: 0% 1% 0% 0%;
   flex-direction: row;
   align-items: flex-end;
   justify-content: flex-end;
 }
-#ThemeImage{
+#ThemeImage {
   width: 2rem;
   height: 2rem;
-  margin: .1rem;
-  padding: .1rem;
+  margin: 0.1rem;
+  padding: 0.1rem;
 }
 .ItemBoxElement {
   padding: 0.1rem;
@@ -148,27 +158,26 @@ p {
 }
 .SkillListElement {
   margin: 0rem 0.1rem 1rem 0.1rem;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 .bullet {
   color: #49795a;
 }
-.PageCountGreen{
+.PageCountGreen {
   color: #49795a;
   display: inline-block;
 }
-.PageCountGray{
-  color:grey;
+.PageCountGray {
+  color: grey;
   display: inline-block;
 }
-tab{
-margin-left: 1rem;
+tab {
+  margin-left: 1rem;
 }
-.PageCount{
+.PageCount {
   position: absolute;
   bottom: 2rem;
-  right: .1rem;
-
+  right: 0.1rem;
 }
 .nextItemButton {
   height: 2rem;
@@ -176,9 +185,9 @@ margin-left: 1rem;
   position: absolute;
   bottom: 1rem;
   right: 1rem;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
 }
-.ItemBox{
+.ItemBox {
   padding: 1rem;
   width: 320px;
 }
