--- a/Style.css
+++ b/Style.css
@@ -1,39 +1,24 @@
-:root,
-:root.light {
-  --bg-color: white;
-  --text-color: black;
-}
-:root.dark {
-  --bg-color: rgba(0, 25, 30, 255);
-  --text-color: rgba(170, 170, 170, 255);
-}
 body,
 html {
-  height: 96%;
-  width: 98%;
-  margin: 0% 1% 1% 1%;
+  height: 100%;
+  width: 100%;
+  margin: 0%;
   padding: 0%;
   background-color: var(--bg-color);
 }
-#bg {
-  height: 100%;
-  display: grid;
-}
-#MainBg{
-  
-  border-radius: 0.3rem;
-  height: 91%;
-  width: 94%;
-  margin: 0% 1% 1% 1%;
-  padding: 0%;
-  position: absolute;
-}
-#Center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
-  /* text-align: center; */
+#Center {
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+#Main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 6rem;
 }
 #SidebarText {
   margin: 0rem;
@@ -42,79 +27,31 @@ html {
   color: var(--text-color);
 }
 #Sidebar {
-  background-color: var(--bg-color);
+  background-color: red;
   color: --text-color;
+  margin: 0.2rem;
   width: min-content;
   height: fit-content;
   padding: 1rem 0.5rem 1rem 0.5rem;
   border-radius: 0.5rem;
   text-align: center;
-  position: absolute;
   z-index: 1;
 }
 
-#Infobar {
-  background-color: var(--bg-color);
-  width: 20rem;
-  height: 26.5rem;
-  border-radius: 0.5rem;
-  position: absolute;
-  z-index: 1;
-  display: flex;
-  color: var(--text-color);
-}
-#MainbarBg {
-  width: 20rem;
-  height: 30rem;
-  position: absolute;
-  border-radius: 0.5rem;
-  z-index: -1;
-  background-image: url(/BG/filip-zrnzevic-QsWG0kjPQRY-unsplash_Night.jpg);
-}
 #Mainbar {
+  background-color: aqua;
   width: 20rem;
   height: 30rem;
   border-radius: 0.5rem;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   text-align: center;
-  position: absolute;
-  margin: 0rem 0.5rem 0rem 0.5rem;
-  z-index: 2;
+  margin: 0.2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-#Header {
-  height: 3rem;
-}
-#ThemeButton {
-  height: 3rem;
-  display: flex;
-  margin: 0% 1% 0% 0%;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: flex-end;
-}
-#ThemeImage {
-  width: 2rem;
-  height: 2rem;
-  margin: 0.1rem;
-  padding: 0.1rem;
-}
-.ItemBoxElement {
-  padding: 0.1rem;
-  margin: 0.1rem;
-}
-#NameInMainBar {
-  font-size: 2rem;
-  color: --text-color;
-}
-#ExtraInfoInMainBar {
-  font-size: 1rem;
-  color: --text-color;
+  position: relative;
+
+  justify-content: space-around;
 }
 #ProfilePic {
   background-color: var(--bg-color);
@@ -124,13 +61,10 @@ html {
   border-color: var(--bg-color);
   border-width: 0.5rem;
   border-radius: 50%;
-
   display: flex;
   align-items: center;
   justify-content: center;
-}
-h1 {
-  text-align: center;
+  margin-left: 25%;
 }
 img {
   width: 80%;
@@ -141,20 +75,15 @@ img {
   width: 2.5rem;
   padding-top: 1rem;
 }
-
-#MainInfo {
-  padding: 1rem;
-}
-p {
-  margin: 1rem;
-}
 .SkillsList {
-  color: --text-color;
+  background-color: #49795a;
   margin: 1px;
-  height: 20rem;
+  width: 100%;
+  height: 70%;
   display: grid;
   grid-template-rows: repeat(3, max-content);
   grid-auto-flow: column;
+  margin-bottom: 4rem;
 }
 .SkillListElement {
   margin: 0rem 0.1rem 1rem 0.1rem;
@@ -171,200 +100,31 @@ p {
   color: grey;
   display: inline-block;
 }
-tab {
-  margin-left: 1rem;
-}
-.PageCount {
-  position: absolute;
-  bottom: 2rem;
-  right: 0.1rem;
-}
 .nextItemButton {
   height: 2rem;
   width: 2rem;
-  position: absolute;
   bottom: 1rem;
   right: 1rem;
   border-radius: 0.6rem;
+  position: absolute;
+}
+.MainWindowTitle {
+  background-color: red;
+  height: fit-content;
+  width: 100%;
+  height: 30%;
+  margin-top: 5rem;
+}
+.MainWindowText {
+  background-color: #49795a;
+  height: fit-content;
+  width: 100%;
+  height: 70%;
+  margin-bottom: 4rem;
 }
 .ItemBox {
-  padding: 1rem;
-  width: 320px;
-}
-.EducationList {
-  color: --text-color;
-  margin: 1px;
-  height: 20rem;
-  display: grid;
-  grid-template-rows: repeat(3, max-content);
-  grid-auto-flow: column;
-}
-
-/* Animation to show item with slow fade in  */
-.fade-in {
-  animation: fadeIn ease 1s;
-  -webkit-animation: fadeIn ease 1s;
-  -moz-animation: fadeIn ease 1s;
-  -o-animation: fadeIn ease 1s;
-  -ms-animation: fadeIn ease 1s;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-moz-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-o-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-/* Animation to slide sidebar to left from main bar */
-.TransitionLeft {
-  animation: TransitionLeft ease 1s;
-  -webkit-animation: TransitionLeft ease 1s;
-  -moz-animation: TransitionLeft ease 1s;
-  -o-animation: TransitionLeft ease 1s;
-  -ms-animation: TransitionLeft ease 1s;
-  left: 50%;
-  margin-left: -260px;
-}
-@keyframes TransitionLeft {
-  0% {
-    left: 50%;
-    margin-left: -160px;
-  }
-  100% {
-    left: 50%;
-    margin-left: -260px;
-  }
-}
-@-moz-keyframes TransitionLeft {
-  0% {
-    left: 50%;
-    margin-left: -160px;
-  }
-  100% {
-    left: 50%;
-    margin-left: -260px;
-  }
-}
-@-webkit-keyframes TransitionLeft {
-  0% {
-    left: 50%;
-    margin-left: -160px;
-  }
-  100% {
-    left: 50%;
-    margin-left: -260px;
-  }
-}
-@-o-keyframes TransitionLeft {
-  0% {
-    left: 50%;
-    margin-left: -160px;
-  }
-  100% {
-    left: 50%;
-    margin-left: -260px;
-  }
-}
-@-ms-keyframes TransitionLeft {
-  0% {
-    left: 50%;
-    margin-left: -160px;
-  }
-  100% {
-    left: 50%;
-    margin-left: -260px;
-  }
-}
-/* Animation to slide Infobar to right from main bar */
-.TransitionRight {
-  animation: TransitionRight ease 1s;
-  -webkit-animation: TransitionRight ease 1s;
-  -moz-animation: TransitionRight ease 1s;
-  -o-animation: TransitionRight ease 1s;
-  -ms-animation: TransitionRight ease 1s;
-  right: 50%;
-  margin-right: -487.5px;
-}
-@keyframes TransitionRight {
-  0% {
-    right: 50%;
-    margin-right: -160px;
-  }
-  100% {
-    right: 50%;
-    margin-right: -487.5px;
-  }
-}
-@-moz-keyframes TransitionRight {
-  0% {
-    right: 50%;
-    margin-right: -160px;
-  }
-  100% {
-    right: 50%;
-    margin-right: -487.5px;
-  }
-}
-@-webkit-keyframes TransitionRight {
-  0% {
-    right: 50%;
-    margin-right: -160px;
-  }
-  100% {
-    right: 50%;
-    margin-right: -487.5px;
-  }
-}
-@-o-keyframes TransitionRight {
-  0% {
-    right: 50%;
-    margin-right: -160px;
-  }
-  100% {
-    right: 50%;
-    margin-right: -487.5px;
-  }
-}
-@-ms-keyframes TransitionRight {
-  0% {
-    right: 50%;
-    margin-right: -160px;
-  }
-  100% {
-    right: 50%;
-    margin-right: -487.5px;
-  }
+  background-color: #49795a;
+  width: 100%;
+  height: 70%;
+  margin-bottom: 4rem;
 }
