--- a/Style.css
+++ b/Style.css
@@ -4,11 +4,11 @@ html {
   width: 100%;
   margin: 0%;
   padding: 0%;
-  background-color: var(--bg-color);
+  background-color: blue;
 }
 
 #Center {
-  background-color: blue;
+  /* background-color: blue; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,10 +24,10 @@ html {
   margin: 0rem;
   padding-bottom: 0rem;
   font-size: 1rem;
-  color: var(--text-color);
+  /* color: var(--text-color); */
 }
 #Sidebar {
-  background-color: red;
+  background-color: aqua;
   color: --text-color;
   margin: 0.2rem;
   width: min-content;
@@ -76,7 +76,8 @@ img {
   padding-top: 1rem;
 }
 .SkillsList {
-  background-color: #49795a;
+  color: black;
+  /* background-color: #49795a; */
   margin: 1px;
   width: 100%;
   height: 70%;
@@ -109,21 +110,21 @@ img {
   position: absolute;
 }
 .MainWindowTitle {
-  background-color: red;
+  /* background-color: red; */
   height: fit-content;
   width: 100%;
   height: 30%;
   margin-top: 5rem;
 }
 .MainWindowText {
-  background-color: #49795a;
+  /* background-color: #49795a; */
   height: fit-content;
   width: 100%;
   height: 70%;
   margin-bottom: 4rem;
 }
 .ItemBox {
-  background-color: #49795a;
+  /* background-color: #49795a; */
   width: 100%;
   height: 70%;
   margin-bottom: 4rem;
