--- a/Style.css
+++ b/Style.css
@@ -4,11 +4,17 @@ html {
   width: 100%;
   margin: 0%;
   padding: 0%;
-  background-color: blue;
+  background-image: url(/BG/vishnu-mohanan-pfR18JNEMv8-unsplash.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
+p,div{
+  text-align: left;
+  font-size: 1rem;
+}
 #Center {
-  /* background-color: blue; */
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,47 +30,47 @@ html {
   margin: 0rem;
   padding-bottom: 0rem;
   font-size: 1rem;
-  /* color: var(--text-color); */
 }
 #Sidebar {
-  background-color: aqua;
-  color: --text-color;
-  margin: 0.2rem;
-  width: min-content;
-  height: fit-content;
-  padding: 1rem 0.5rem 1rem 0.5rem;
+  background-color: #c9a97a;
+  margin: 0.2rem .2rem .2rem .3rem;
+  padding: .5rem;
   border-radius: 0.5rem;
   text-align: center;
   z-index: 1;
+  background-image: url(/BG/sj-objio-XFWiZTa2Ub0-unsplash.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
 #Mainbar {
-  background-color: aqua;
+  background-image: url(/BG/bharath-g-s-aLGiPJ4XRO4-unsplash.jpg);
+  background-color: #c9a97a;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 20rem;
   height: 30rem;
   border-radius: 0.5rem;
   text-align: center;
-  margin: 0.2rem;
+  margin: 0.4rem .4rem .4rem .2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   position: relative;
 
   justify-content: space-around;
 }
 #ProfilePic {
-  background-color: var(--bg-color);
+  background-color: #4d617b;
   width: 10rem;
   height: 10rem;
   border: 1rem solid;
-  border-color: var(--bg-color);
+  border-color: black;
   border-width: 0.5rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 25%;
 }
 img {
   width: 80%;
@@ -72,12 +78,11 @@ img {
   object-fit: cover;
 }
 .Icon {
-  width: 2.5rem;
+  width: 2rem;
   padding-top: 1rem;
 }
 .SkillsList {
   color: black;
-  /* background-color: #49795a; */
   margin: 1px;
   width: 100%;
   height: 70%;
@@ -110,22 +115,31 @@ img {
   position: absolute;
 }
 .MainWindowTitle {
-  /* background-color: red; */
-  height: fit-content;
   width: 100%;
-  height: 30%;
+  max-height: 30%;
   margin-top: 5rem;
 }
+.Header2{
+  width: 90%;
+  min-height: 40%;
+  height: 70%;
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.2rem;
+}
 .MainWindowText {
-  /* background-color: #49795a; */
-  height: fit-content;
-  width: 100%;
+  width: 80%;
+  min-height: 40%;
   height: 70%;
   margin-bottom: 4rem;
+  margin-left: 1rem;
 }
 .ItemBox {
-  /* background-color: #49795a; */
-  width: 100%;
+  width: 80%;
   height: 70%;
   margin-bottom: 4rem;
+  margin-left: 1rem;
 }
